lib/src/flutter_opencv_ffi_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:flutter_opencv_ffi/flutter_opencv_ffi.dart')
library;

import 'dart:ffi' as ffi;

/// Returns the OpenCV version string (e.g. "4.13.0").
@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> opencv_version();

/// Creates an empty Mat.
@ffi.Native<ffi.Pointer<CvMat> Function()>()
external ffi.Pointer<CvMat> opencv_mat_create();

/// Destroys a Mat and frees its memory.
@ffi.Native<ffi.Void Function(ffi.Pointer<CvMat>)>()
external void opencv_mat_destroy(
  ffi.Pointer<CvMat> mat,
);

/// Creates a deep copy of a Mat.
@ffi.Native<ffi.Pointer<CvMat> Function(ffi.Pointer<CvMat>)>()
external ffi.Pointer<CvMat> opencv_mat_clone(
  ffi.Pointer<CvMat> mat,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<CvMat>)>()
external int opencv_mat_rows(
  ffi.Pointer<CvMat> mat,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<CvMat>)>()
external int opencv_mat_cols(
  ffi.Pointer<CvMat> mat,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<CvMat>)>()
external int opencv_mat_type(
  ffi.Pointer<CvMat> mat,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<CvMat>)>()
external int opencv_mat_channels(
  ffi.Pointer<CvMat> mat,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<CvMat>)>()
external int opencv_mat_empty(
  ffi.Pointer<CvMat> mat,
);

@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<CvMat>)>()
external ffi.Pointer<ffi.Uint8> opencv_mat_data(
  ffi.Pointer<CvMat> mat,
);

/// Reads an image from a file. Returns NULL on failure (check opencv_get_last_error).
@ffi.Native<ffi.Pointer<CvMat> Function(ffi.Pointer<ffi.Char>, ffi.Int)>()
external ffi.Pointer<CvMat> opencv_imread(
  ffi.Pointer<ffi.Char> filename,
  int flags,
);

/// Writes an image to a file. Returns 1 on success, 0 on failure.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<CvMat>)>()
external int opencv_imwrite(
  ffi.Pointer<ffi.Char> filename,
  ffi.Pointer<CvMat> mat,
);

/// Decodes an image from a memory buffer.
@ffi.Native<
    ffi.Pointer<CvMat> Function(ffi.Pointer<ffi.Uint8>, ffi.Int, ffi.Int)>()
external ffi.Pointer<CvMat> opencv_imdecode(
  ffi.Pointer<ffi.Uint8> buf,
  int buf_len,
  int flags,
);

/// Encodes an image to a memory buffer. The caller must free the buffer
/// with opencv_free_buffer. Sets *out_len to the buffer length.
@ffi.Native<
    ffi.Pointer<ffi.Uint8> Function(
        ffi.Pointer<ffi.Char>, ffi.Pointer<CvMat>, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<ffi.Uint8> opencv_imencode(
  ffi.Pointer<ffi.Char> ext,
  ffi.Pointer<CvMat> mat,
  ffi.Pointer<ffi.Int> out_len,
);

/// Frees a buffer allocated by opencv_imencode.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>()
external void opencv_free_buffer(
  ffi.Pointer<ffi.Uint8> buf,
);

/// Converts color space. See cv::ColorConversionCodes.
@ffi.Native<ffi.Pointer<CvMat> Function(ffi.Pointer<CvMat>, ffi.Int)>()
external ffi.Pointer<CvMat> opencv_cvt_color(
  ffi.Pointer<CvMat> src,
  int code,
);

/// Applies Gaussian blur. ksize must be odd and positive.
@ffi.Native<
    ffi.Pointer<CvMat> Function(
        ffi.Pointer<CvMat>, ffi.Int, ffi.Double, ffi.Double)>()
external ffi.Pointer<CvMat> opencv_gaussian_blur(
  ffi.Pointer<CvMat> src,
  int ksize,
  double sigma_x,
  double sigma_y,
);

/// Applies Canny edge detection.
@ffi.Native<
    ffi.Pointer<CvMat> Function(ffi.Pointer<CvMat>, ffi.Double, ffi.Double)>()
external ffi.Pointer<CvMat> opencv_canny(
  ffi.Pointer<CvMat> src,
  double threshold1,
  double threshold2,
);

/// Resizes an image. See cv::InterpolationFlags.
@ffi.Native<
    ffi.Pointer<CvMat> Function(
        ffi.Pointer<CvMat>, ffi.Int, ffi.Int, ffi.Int)>()
external ffi.Pointer<CvMat> opencv_resize(
  ffi.Pointer<CvMat> src,
  int width,
  int height,
  int interpolation,
);

/// Returns the last error message, or NULL if no error.
@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> opencv_get_last_error();

/// Clears the last error.
@ffi.Native<ffi.Void Function()>()
external void opencv_clear_error();

final class CvMat extends ffi.Opaque {}
